<resources>
    <string name="app_name">Android Exam</string>
    <string name="api_url">https://demo6666560.mockable.io/persons</string>
    <string name="proceed">Proceed</string>
    <string name="person_details">Person Details</string>
    <string name="first_name">First Name: </string>
    <string name="last_name">Last Name: </string>
    <string name="birthday">Birthday: </string>
    <string name="age">Age: </string>
    <string name="email_address">Email address: </string>
    <string name="mobile_number">Mobile number: </string>
    <string name="address">Address: </string>
    <string name="contact_person">Contact person: </string>
    <string name="contact_person_s_phone_number">Contact person\'s phone number: </string>
</resources>
